<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="7" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/btn_start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_new_game"
            android:onClick="startGame"
            />
        <Button
            android:id="@+id/btn_show_rules"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_rules"
            android:onClick="showRules"
            />

    </LinearLayout>


</LinearLayout>